--- a/typescript-project/styles.css
+++ b/typescript-project/styles.css
@@ -1,17 +1,46 @@
-
 .container{
-    max-width: 1200px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 60vh;
     background-color: skyblue;
+    font-family: Arial, Helvetica, sans-serif;
 }
 
-main{
-    background-color: white;
-    padding: 20px;
-    width: fit-content;
+.weather {
+    position: absolute;
+    top: 20px;
+    left: 20px;
 }
 
-button{
-    background-color: aqua;
-    padding: 10px;
-    margin-top: 20px;
+main {
+    text-align: center;
+}
+
+.card {
+    background: white;
+    padding: 30px;
+    border-radius: 15px;
+    box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
+    width: 500px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.card h1{
+    margin-bottom: 40px;
+    text-align: center;
+}
+
+.btn{
+    background: #00BFFF;
+    color: white;
+    padding: 10px 20px;
+    border: none;
+    border-radius: 5px;
+    margin-top: 40px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
