--- a/typescript-project/styles.css
+++ b/typescript-project/styles.css
@@ -1,54 +1,69 @@
 .container{
+    font-family: 'Poppins', sans-serif;
+    background: #F5F5F5;
     display: flex;
     justify-content: center;
     align-items: center;
-    height: 60vh;
-    background-color: skyblue;
-    font-family: Arial, Helvetica, sans-serif;
+    height: 100vh;
+    position: relative;
 }
 
 .weather {
     position: absolute;
     top: 20px;
     left: 20px;
+    display: flex;
+    align-items: center;
+    font-size: 18px;
 }
-
-main {
-    text-align: center;
+.icon{
+    width: 2rem;
+    margin-right: 10px;
 }
 
 .card {
-    background: white;
-    padding: 30px;
-    border-radius: 15px;
-    box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
-    width: 500px;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
+    background: #7F58AF;
+    color: white;
+    padding: 40px;
+    border-radius: 30px;
+    max-width: 400px;
+    text-align: center;
+    position: relative;
+    z-index: 2;
+}
+
+.image.b{
+    position: absolute;
 }
 
 .card h1{
-    margin-bottom: 40px;
+    margin-bottom: 2rem;
     text-align: center;
 }
 
+.espai_emoticones{
+    margin-top: 2.5rem;
+}
+
 .btn{
-    background: #00BFFF;
-    color: white;
+    background: #fbca28;
+    color: black;
     padding: 10px 20px;
-    border: none;
-    border-radius: 5px;
-    margin-top: 40px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+    border: solid 1px black;
+    border-radius: 10px;
+    margin-top: 2rem;
+    cursor: pointer;
 }
 
 .btn_ratting{
-    border:none;
-    background-color: white;
+    cursor: pointer;
+    border: none;
+    background: none;
 }
+
 .image{
-    width: 30px
+    width: 2rem;
 }
+
+
+
